--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ disqusShortname = ""
   # Navigation Section
   [params.navigation]
     title = "Sahar Fatima"
-    subtitle = "..."
+    subtitle = "Portfolio for Honours and Learning R"
     menu = "Menu"
     # Optional logo as brand stored in img/
     # logo = "logo.png"
